-Added function bindPaleoTip which wraps phytool's bind.tip for use with non-ultrametric paleontological phylogenies with $root.time elements, allows input of the new tips age and updates $root.time
-Added 'kanto' a fictional example dataset, consisting of a taxon abundances-by-sites table for community ecology
-

Version - 2.4 - 05-01-15
-Modified timePaleoPhy help file to clarify 'these are not realistic time-scaling functions' statement and correcting an 'either' to 'neither' in the description of argument 'ntrees'
-Modified bin_timePaleoPhy and bin_cal3TimePaleoPhy to clarify that dateTreatment=minMax should be replaced be *either* the point.occur argument *or* a sites matrix
-Changed license from GPL ver 2 or higher to Creative Common zero, as I finally realized that CC0 is supported by CRAN (apparently I missed this change years ago)
-Added 'clade' option to collapseNodes to collapse *all* descendant edges of a selected node
-Added function testEdgeMat which is a simple checker of the $edge matrix of phylo objects for inconsistencies
-Added function taxonSortPBDBocc which sorts unique taxa out of PBDB occurrence datasets
-Added function occData2timeList which converts taxon-sorted occurrence data lists to the two-matrix timeList object useable by many other paleotree functions
-Added example data downloads from the Paleobiology Database of occurrence data and taxonomic data, available under 'graptPBDB'
-Added function makePBDBtaxonTree which takes taxon data from the PBDB and constructs a very informal taxon tree from either (a) parent-child taxon relationships pairs, by default, or (b) the Linnean taxonomic hierarchy
-Added functions timeList2fourDate and fourDate2timeList which convert between the 'four-date' and 'timeList' formats for first and last appearance dates given as bounded ages (i.e. start and end times of intervals)
-Added function plotOccData which will plot occurrence data, such as that output by taxonSortPBDBocc from PBDB downloads